APPC-2431 - Added send/receive buttons

--- a/app/src/main/res/layout/activity_transactions.xml
+++ b/app/src/main/res/layout/activity_transactions.xml
@@ -15,7 +15,7 @@
       android:layout_height="wrap_content"
       android:animateLayoutChanges="true"
       android:background="@null"
-      android:minHeight="190dp"
+      android:minHeight="227dp"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toTopOf="parent"
@@ -33,15 +33,54 @@
     <View
         android:id="@+id/spacer"
         android:layout_width="match_parent"
-        android:layout_height="320dp"
+        android:layout_height="379dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/send_button"
+        android:layout_width="113dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="18dp"
+        android:fontFamily="sans-serif"
+        android:text="@string/title_send"
+        android:textAllCaps="false"
+        android:textSize="14sp"
+        app:backgroundTint="@color/wild_watermelon"
+        app:icon="@drawable/ic_bottom_nav_send"
+        app:iconGravity="end"
+        app:layout_constraintBottom_toTopOf="@id/header_recycler_view"
+        app:layout_constraintEnd_toStartOf="@id/receive_button"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:shapeAppearance="@style/Home.PillShape"
+        />
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/receive_button"
+        android:layout_width="113dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="18dp"
+        android:fontFamily="sans-serif"
+        android:text="@string/title_request"
+        android:textAllCaps="false"
+        android:textSize="14sp"
+        app:backgroundTint="@color/wild_watermelon"
+        app:icon="@drawable/ic_bottom_nav_receive"
+        app:iconGravity="end"
+        app:iconPadding="0dp"
+        app:layout_constraintBottom_toTopOf="@id/header_recycler_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/send_button"
+        app:shapeAppearance="@style/Home.PillShape"
+        />
     <com.asfoundation.wallet.ui.transactions.HeaderRecyclerView
         android:id="@+id/header_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="160dp"
+        android:layout_height="152dp"
         android:background="@null"
         android:clipToPadding="false"
         android:visibility="gone"
