--- a/app/src/main/res/layout/item_card_notification.xml
+++ b/app/src/main/res/layout/item_card_notification.xml
@@ -3,13 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginStart="4dp"
+    android:layout_marginEnd="4dp"
     android:clickable="true"
     android:focusable="true"
     android:maxWidth="328dp"
     app:cardBackgroundColor="#8D393939"
     app:cardCornerRadius="14dp"
     app:cardElevation="0dp"
-    app:cardUseCompatPadding="true"
     >
 
   <androidx.constraintlayout.widget.ConstraintLayout
