APPC-2431 - Extracted styles

--- a/app/src/main/res/layout/activity_transactions.xml
+++ b/app/src/main/res/layout/activity_transactions.xml
@@ -41,41 +41,30 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/send_button"
+        style="@style/Home.SendReceiveButton"
         android:layout_width="113dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="18dp"
-        android:fontFamily="sans-serif"
         android:text="@string/title_send"
-        android:textAllCaps="false"
-        android:textSize="14sp"
-        app:backgroundTint="@color/wild_watermelon"
         app:icon="@drawable/ic_bottom_nav_send"
-        app:iconGravity="end"
         app:layout_constraintBottom_toTopOf="@id/header_recycler_view"
         app:layout_constraintEnd_toStartOf="@id/receive_button"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
-        app:shapeAppearance="@style/Home.PillShape"
         />
     <com.google.android.material.button.MaterialButton
         android:id="@+id/receive_button"
+        style="@style/Home.SendReceiveButton"
         android:layout_width="113dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="18dp"
-        android:fontFamily="sans-serif"
         android:text="@string/title_request"
-        android:textAllCaps="false"
-        android:textSize="14sp"
-        app:backgroundTint="@color/wild_watermelon"
         app:icon="@drawable/ic_bottom_nav_receive"
-        app:iconGravity="end"
-        app:iconPadding="0dp"
         app:layout_constraintBottom_toTopOf="@id/header_recycler_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/send_button"
-        app:shapeAppearance="@style/Home.PillShape"
         />
     <com.asfoundation.wallet.ui.transactions.HeaderRecyclerView
         android:id="@+id/header_recycler_view"
