--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1091,4 +1091,15 @@
     <item name="cornerSizeBottomLeft">12dp</item>
     <item name="cornerSizeBottomRight">12dp</item>
   </style>
+
+  <style name="Home.SendReceiveButton">
+    <item name="android:textAllCaps">false</item>
+    <item name="android:textSize">14sp</item>
+    <item name="android:fontFamily">sans-serif</item>
+    <item name="backgroundTint">@color/wild_watermelon</item>
+    <item name="iconGravity">end</item>
+    <item name="iconPadding">0dp</item>
+    <item name="shapeAppearance">@style/Home.PillShape</item>
+  </style>
+
 </resources>
