APPC-2431 - Fixed landscape issue with bottom navigation

--- a/app/src/main/res/layout/activity_transactions.xml
+++ b/app/src/main/res/layout/activity_transactions.xml
@@ -226,7 +226,7 @@
 
   <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/top_up_wrapper"
-      android:layout_width="wrap_content"
+      android:layout_width="0dp"
       android:layout_height="wrap_content"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
