--- a/app/src/main/res/layout/activity_transactions.xml
+++ b/app/src/main/res/layout/activity_transactions.xml
@@ -11,7 +11,7 @@
 
   <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/collapsable_bar"
-      android:layout_width="match_parent"
+      android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:animateLayoutChanges="true"
       android:background="@null"
@@ -32,17 +32,19 @@
         />
     <View
         android:id="@+id/spacer"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="379dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/send_button"
         style="@style/Home.SendReceiveButton"
-        android:layout_width="113dp"
+        android:layout_width="114dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="18dp"
@@ -56,7 +58,7 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/receive_button"
         style="@style/Home.SendReceiveButton"
-        android:layout_width="113dp"
+        android:layout_width="114dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="18dp"
@@ -68,22 +70,26 @@
         />
     <com.asfoundation.wallet.ui.transactions.HeaderRecyclerView
         android:id="@+id/header_recycler_view"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="152dp"
         android:background="@null"
         android:clipToPadding="false"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         />
 
   </androidx.constraintlayout.widget.ConstraintLayout>
 
   <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
       android:id="@+id/refresh_layout"
-      android:layout_width="match_parent"
+      android:layout_width="0dp"
       android:layout_height="0dp"
       android:layout_marginBottom="57dp"
       app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/collapsable_bar"
       >
 
