--- a/skills/src/main/res/layout/fragment_skills.xml
+++ b/skills/src/main/res/layout/fragment_skills.xml
@@ -3,28 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:animateLayoutChanges="true"
     >
 
-  <Button
-      android:id="@+id/find_opponent_button"
-      android:layout_width="wrap_content"
+  <include
+      android:id="@+id/create_ticket_layout"
+      layout="@layout/create_ticket_layout"
+      android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:text="@string/find_room"
+      android:layout_marginStart="16dp"
+      android:layout_marginTop="16dp"
+      android:layout_marginEnd="16dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       />
 
-  <EditText
-      android:id="@+id/user_name_tv"
-      android:layout_width="160dp"
-      android:layout_height="wrap_content"
-      android:hint="@string/user_name"
-      app:layout_constraintBottom_toTopOf="@id/find_opponent_button"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      />
 
   <TextView
       android:id="@+id/error_text"
@@ -35,68 +30,26 @@
       app:layout_constraintTop_toTopOf="parent"
       />
 
-  <ProgressBar
-      android:id="@+id/progress_bar"
-      style="?android:attr/progressBarStyleLarge"
+  <include
+      android:id="@+id/loading_ticket_layout"
+      layout="@layout/loading_ticket_layout"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_centerHorizontal="true"
-      android:visibility="gone"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
       />
 
-  <TextView
-      android:id="@+id/progress_bar_tv"
+  <include
+      android:id="@+id/create_wallet_layout"
+      layout="@layout/create_wallet_layout"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:visibility="gone"
-      app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/progress_bar"
-      />
-
-  <RelativeLayout
-      xmlns:tools="http://schemas.android.com/tools"
-      android:id="@+id/create_wallet_card"
-      android:layout_width="296dp"
-      android:layout_height="254dp"
-      android:layout_gravity="center"
-      android:background="@drawable/background_card"
-      android:layout_centerHorizontal="true"
-      android:visibility="gone"
       app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      >
-
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/create_wallet_animation"
-        android:layout_width="96dp"
-        android:layout_height="96dp"
-        android:layout_centerInParent="true"
-        app:lottie_enableMergePathsForKitKatAndAbove="true"
-        app:lottie_loop="true"
-        app:lottie_rawRes="@raw/create_wallet_loading_animation"
-        tools:visibility="visible"
-        />
-
-    <TextView
-        android:id="@+id/create_wallet_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/create_wallet_animation"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:maxLines="1"
-        android:text="@string/provide_wallet_creating_wallet_header"
-        tools:visibility="visible"
-        style="@style/TextAppearance.AppCompat.Body1.Roboto.Medium"
-        />
-
-  </RelativeLayout>
+      app:layout_constraintEnd_toEndOf="parent"
+      />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
