--- a/skills/src/main/res/values/styles.xml
+++ b/skills/src/main/res/values/styles.xml
@@ -1,7 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:statusBarColor">@color/statusBarColor</item>
+        <item name="android:windowContentTransitions">true</item>
+    </style>
+
     <style name="TextAppearance.AppCompat.Body1.Roboto.Medium" parent="TextAppearance.AppCompat.Body1">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">#828282</item>
     </style>
+
+    <style name="Theme.AppCompat.Transparent" parent="Theme.AppCompat">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:fitsSystemWindows">true</item>
+        <item name="android:windowContentTransitions">true</item>
+    </style>
+
+    <style name="Theme.AppCompat.Transparent.FitAppWindow" parent="Theme.AppCompat.Transparent">
+        <item name="android:fitsSystemWindows">true</item>
+        <item name="android:windowIsFloating">false</item>
+    </style>
+
+    <style name="ButtonStyle" parent="Base.Widget.AppCompat.ImageButton">
+        <item name="android:background">@drawable/button_background</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textColor">@drawable/btn_text_color</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:paddingStart">@dimen/big_padding</item>
+        <item name="android:paddingEnd">@dimen/big_padding</item>
+        <item name="android:minWidth">64dp</item>
+        <item name="android:minHeight">36dp</item>
+        <item name="android:letterSpacing">.09</item>
+    </style>
+
 </resources>
