--- a/skills/src/main/res/layout/create_ticket_layout.xml
+++ b/skills/src/main/res/layout/create_ticket_layout.xml
@@ -53,7 +53,7 @@
 
                     <View
                         android:id="@+id/top_separator"
-                        android:layout_width="320dp"
+                        android:layout_width="310dp"
                         android:layout_height="1dp"
                         android:layout_marginTop="12dp"
                         android:background="@android:color/darker_gray"
@@ -80,6 +80,7 @@
                             android:inputType="text"
                             android:maxLines="1"
                             android:paddingEnd="64dp"
+                            android:paddingRight="64dp"
                             />
                     </com.google.android.material.textfield.TextInputLayout>
 
