--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,23 +23,10 @@
     <item name="android:windowContentTransitions">true</item>
   </style>
 
-<!--  <style name="CustomBottomSheetDialog" parent="@style/ThemeOverlay.MaterialComponents.BottomSheetDialog">-->
-<!--    <item name="bottomSheetStyle">@style/CustomBottomSheet</item>-->
-<!--  </style>-->
-
-<!--  <style name="CustomBottomSheet" parent="Widget.MaterialComponents.BottomSheet">-->
-<!--    <item name="shapeAppearanceOverlay">@style/CustomShapeAppearanceBottomSheetDialog</item>-->
-<!--  </style>-->
-
-<!--  <style name="CustomShapeAppearanceBottomSheetDialog" parent="">-->
-<!--    <item name="cornerFamily">rounded</item>-->
-<!--    <item name="cornerSizeTopRight">22dp</item>-->
-<!--    <item name="cornerSizeTopLeft">22dp</item>-->
-<!--  </style>-->
-
   <style name="AppBottomSheetDialogTheme"
       parent="Theme.Design.Light.BottomSheetDialog">
     <item name="bottomSheetStyle">@style/AppModalStyle</item>
+    <item name="behavior_draggable">false</item>
   </style>
 
   <style name="AppModalStyle"
