--- a/app/src/main/res/layout/ether_transaction_bottom_sheet.xml
+++ b/app/src/main/res/layout/ether_transaction_bottom_sheet.xml
@@ -18,7 +18,7 @@
       android:id="@+id/ether_transaction_bottom_sheet_title"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="The transaction has started"
+      android:text="@string/block_transaction_disclaimer_title"
       style="@style/BottomSheetEtherTransactionTitle"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
@@ -29,7 +29,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="11dp"
-      android:text="You can follow the process on etherscan"
+      android:text="@string/block_transaction_disclaimer_body"
       style="@style/BottomSheetEtherTransactionSubtitle"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/ether_transaction_bottom_sheet_title"
