[APPC-2456] added vip badge layout

--- a/app/src/main/res/drawable/vip_badge_background.xml
+++ b/app/src/main/res/drawable/vip_badge_background.xml
@@ -3,12 +3,9 @@
     android:shape="rectangle">
 
   <solid
-      android:color="#EC9B1A"/>
+        android:color="@color/vip_badge_background_color"/>
 
   <corners
       android:radius="16dp"/>
-  <size
-      android:width="65dp"
-      android:height="32dp"/>
 
 </shape>
