--- a/app/src/main/res/layout/layout_vip_badge.xml
+++ b/app/src/main/res/layout/layout_vip_badge.xml
@@ -33,8 +33,8 @@
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="VIP"
-      android:textSize="12dp"
+      android:text="@string/vip"
+      android:textSize="12sp"
       android:textColor="@color/white"
       android:layout_marginStart="5dp"
       android:layout_marginEnd="6dp"
