[APPC-2456] changes from PR comments

--- a/app/src/main/res/menu/menu_transactions_activity.xml
+++ b/app/src/main/res/menu/menu_transactions_activity.xml
@@ -6,7 +6,7 @@
       android:id="@+id/action_vip_badge"
       android:icon="@drawable/ic_vip_badge"
       android:orderInCategory="1"
-      android:title="VIP"
+      android:title="@string/vip"
       app:actionLayout="@layout/layout_vip_badge"
       app:showAsAction="ifRoom" />
 
