--- a/app/src/main/res/drawable/vip_badge_background.xml
+++ b/app/src/main/res/drawable/vip_badge_background.xml
@@ -2,10 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-  <solid
-        android:color="@color/vip_badge_background_color"/>
+  <solid android:color="@color/vip_badge_background_color" />
 
-  <corners
-      android:radius="16dp"/>
+  <corners android:radius="16dp" />
 
 </shape>
