--- a/app/src/main/res/layout/layout_vip_badge.xml
+++ b/app/src/main/res/layout/layout_vip_badge.xml
@@ -11,6 +11,7 @@
       android:layout_height="32dp"
       android:layout_marginStart="15dp"
       android:layout_marginEnd="15dp"
+      android:foreground="?attr/selectableItemBackground"
       android:background="@drawable/vip_badge_background"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
