--- a/app/src/main/res/layout/fragment_carrier_confirm.xml
+++ b/app/src/main/res/layout/fragment_carrier_confirm.xml
@@ -5,6 +5,7 @@
     style="@style/PaymentMethods.DialogCardStyle"
     android:animateLayoutChanges="true"
     android:theme="@style/MaterialAppTheme"
+    tools:viewBindingIgnore="true"
     >
 
   <com.asfoundation.wallet.ui.iab.payments.common.PaymentsHeaderView
@@ -107,6 +108,7 @@
       />
 
   <include
+      android:id="@+id/dialog_buy_buttons"
       layout="@layout/dialog_buy_buttons_payment_methods"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
