--- a/app/src/main/res/layout/item_appcoins_application_list.xml
+++ b/app/src/main/res/layout/item_appcoins_application_list.xml
@@ -15,7 +15,7 @@
       android:layout_marginStart="8dp"
       android:fontFamily="@font/roboto_regular"
       android:text="@string/spend_your_appcoins"
-      android:textColor="#99FFFFFF"
+      android:textColor="@color/white_99"
       android:textSize="@dimen/list_group_head"
       app:layout_constraintHorizontal_bias="0"
       app:layout_constraintHorizontal_chainStyle="packed"
