--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,6 +34,7 @@
   <color name="grey_5a">#5a5a5a</color>
   <color name="grey_e5">#e5e5e5</color>
   <color name="grey_65">#656565</color>
+  <color name="white_99">#99FFFFFF</color>
 
   <color name="appbar_start_gradient_color">#000000</color>
   <color name="appbar_end_gradient_color">#012945</color>
